feat: template for the image data

--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+::selection {
+    @apply bg-accent;
+    @apply text-accent-content;
+}
+
 * {
     box-sizing: border-box;
 }
